--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     
     <p>Pour toute question concernant ces conditions, veuillez nous contacter dans la rubrique “Contacter nous”.</p>
     
+    <p>Pour supprimer toutes les informations utilisateur, veuillez nous contacter dans la rubrique "koojina1@gmail.com".</p>
+
     <p>Dernière mise à jour : 20/04/2024</p>
 </body>
 </html>
