--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
             margin: 0;
-            display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -17,6 +16,7 @@
             background-color: white;
             border-radius: 10px;
             padding: 20px;
+            max-width: 800px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         h1 {
